--- a/src/index.scss
+++ b/src/index.scss
@@ -2,50 +2,85 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
-    * {
-        box-sizing: border-box;
-    }
-      body,
-      input,
-      button {
-        font-size: 62.5%;
-        font-family: "Montserrat", sans-serif;
-        font-size: 14px;
-        line-height: 24px;
-        color: #000000;
-    }
-   
+  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
+  * {
+    box-sizing: border-box;
+  }
+  body,
+  input,
+  button {
+    font-size: 62.5%;
+    font-family: "Poppins", sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    color: #000000;
+  }
 }
 
-.bg-auth{
-        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-        background-size: 400% 400%;
-        animation: gradient 15s ease infinite;
-    
-    @keyframes gradient {
-        0% {
-            background-position: 0% 50%;
-        }
-        50% {
-            background-position: 100% 50%;
-        }
-        100% {
-            background-position: 0% 50%;
-        }
-    }
-}
-.bg-header{
-    
-    background: linear-gradient(90deg, #faf0cd, #fab397);
+.bg-auth {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
 
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+}
+.bg-header {
+  background: #222;
 }
 .scroll-hide::-webkit-scrollbar {
-    display: none; /* cho Chrome, Safari, and Opera */
-    width: 0 !important;
+  display: none; /* cho Chrome, Safari, and Opera */
+  width: 0 !important;
 }
-.text-primary{
+.text-primary {
+  color: #ffbc4b;
+}
+.text-wrap {
+  display: block;
+  display: -webkit-box;
+  max-width: full;
+  height: 14px * 1.3 * 3; /* Fallback for non-webkit */
+  font-size: 14px;
+  line-height: 1.3;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.line-after {
+  h2:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    border-radius: 3px;
+    background: #ffbc4b;
+    left: 50%;
+    top: 150%;
+    translate: -50% 0;
+    position: absolute;
+  }
+}
+.hover-blogs {
+  button:hover {
+    background-color: #ffbc4b;
+    color: #000000;
+  }
+}
+.hover-btnsubmit:hover {
+  background-color: #ffbc4b;
+  color: #000000;
+}
+.hover-menu:hover{
     color: #ffbc4b;
 }
