--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,18 @@
 @layer base {
   @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
   * {
-    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    text-transform: capitalize;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
+    line-height: normal;
   }
   body,
   input,
@@ -15,6 +26,25 @@
     font-size: 14px;
     line-height: 24px;
     color: #000000;
+  }
+  html {
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    scroll-padding-top: 9rem;
+  }
+  
+  html::-webkit-scrollbar {
+    width: 1rem;
+  }
+  
+  html::-webkit-scrollbar-track {
+    background: #111;
+  }
+  
+  html::-webkit-scrollbar-thumb {
+    background: #ffbc4b;
+    border-radius: 5rem;
   }
 }
 
@@ -49,10 +79,10 @@
   display: block;
   display: -webkit-box;
   max-width: full;
-  height: 14px * 1.3 * 3; /* Fallback for non-webkit */
+  height: 14px * 2 * 2; /* Fallback for non-webkit */
   font-size: 14px;
-  line-height: 1.3;
-  -webkit-line-clamp: 3;
+  line-height: normal;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -83,4 +113,99 @@
 }
 .hover-menu:hover{
     color: #ffbc4b;
+}
+.hover-controlblogs:hover{
+    background-color: #ffbc4b;
+}
+.hover-advanceitem:hover{
+  border: 0.2rem solid #ffbc4b;
+}
+.gallery-item{
+    break-inside: avoid;
+}
+//Review 
+.flex-review{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 25px;
+}
+.flex-review-content{
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 42rem;
+          flex: 1 1 42rem;
+}
+.flex-review-container{
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 42rem;
+      flex: 1 1 42rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  gap: 1.5rem;
+}
+.flex-review-item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 20rem;
+          flex: 1 1 20rem;
+}
+.flex-review-user{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
+}
+.hover-reviewitem:hover{
+  border: 0.2rem solid #ffbc4b;
+}
+//blog
+.grid-blog{
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(32rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+  gap: 1.5rem;
+}
+.hover-blogitem:hover img{
+    -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+//Banner
+.bg-banner{
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(17, 17, 17, 0.7)), to(rgba(17, 17, 17, 0.7))), url(/assets/images/banner/banner-bg.jpg) no-repeat;
+  background: linear-gradient(rgba(17, 17, 17, 0.7), rgba(17, 17, 17, 0.7)), url(/assets/images/banner/banner-bg.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+//Social
+.hover-social:hover {
+  background-color: #ffbc4b;
+  color: #111;
+}
+.grid-footer{
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(25rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 1.5rem;
+}
+.hover-quicklink:hover span{
+    padding-left: .5rem;
+    color: #ffbc4b;
+}
+//Newletter
+.hover-btnsubscribe:hover{
+  background-color: #ffbc4b;
+  color: #000000;
 }
