--- a/src/pages/projects/project.scss
+++ b/src/pages/projects/project.scss
@@ -1,23 +1,34 @@
-
-//poster 
-.bg-poster{
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(17, 17, 17, 0.2)), to(rgba(17, 17, 17, 0.2))), url(../../assets/images/poster/poster2.jpg);
+//poster
+.bg-poster {
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(17, 17, 17, 0.2)),
+      to(rgba(17, 17, 17, 0.2))
+    ),
+    url(../../assets/images/poster/poster2.jpg);
   background-size: cover;
   background-position: center;
 }
 //Search
 
-.hover-filter:active{
+.hover-filter:active {
   background-color: #ffbc4b;
   color: #000000;
 }
 //imgdetail
-.grid-detail{
+.grid-detail {
   display: grid;
   grid-template-rows: repeat(6, minmax(0, 50px));
-
 }
-.hover-button:hover{
+.hover-button:hover {
   background-color: #ffbc4b;
   color: #000000;
+}
+
+.hover-button:hover > .loadingsend {
+  border: 1px solid #ffffff;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
 }
