--- a/src/index.scss
+++ b/src/index.scss
@@ -665,13 +665,14 @@
   }
 }
 //My place
-.place-saving {
+#place-saving {
   .myplace {
     border: 1px solid #ffbc4b;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    height: 100%;
     .img {
       width: 30%;
       height: 100%;
