--- a/src/index.scss
+++ b/src/index.scss
@@ -754,3 +754,18 @@ html {
     color: #000000;
   }
 }
+
+// Blog Detail
+
+.imgBlog {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 12px;
+  margin: 12px 0;
+}
+
+.contentBlog {
+  color: #000000;
+  font-size: 14px;
+}
