--- a/src/index.scss
+++ b/src/index.scss
@@ -750,7 +750,7 @@ html {
   .selected {
     color: #ffbc4a;
   }
-  li {
+  a {
     font-size: 16px;
     @apply cursor-pointer text-[16px] leading-none border-[1px] border-solid border-primary inline-block px-5 py-3 rounded-lg text-primary;
     transition: all linear 0.5s;
